add content to services page index.html

--- a/services/index.html
+++ b/services/index.html
@@ -25,11 +25,61 @@
     <!-- hero section -->
     <section>
       <article>
-        <h1>Modern engineering for innovative companies.</h1>
-        <h2>
-          We are passionate about all things React, React Native, and Web3.
-        </h2>
+        <h1>Pushing Technology Forward.</h1>
+        <p>
+          Pragmatic, integrated, and sustainable decision making. We bridge the
+          gap between engineering and product.
+        </p>
+        <div>
+          <a href="#frontend"><span><\></span> Frontend</a>
+          <a href="#backend">// Backend</a>
+        </div>
       </article>
-      <!-- protfolio menu -->
+    </section>
+    <!-- hero content -->
+    <main>
+      <section id="frontend-section">
+        <h2>// Frontend</h2>
+        <p>
+          With over 7 years of experience developing React and React Native
+          applications, our expertise covers every facet of development
+          including, product planning, navigation architecture, gestures &
+          animations, charting, server side rendering, CI/CD and performance. We
+          focus on shipping fast and shipping often. While engineering is the
+          focus, product is the outcome. We integrate with product and design to
+          iterate and discover. The magic of delightful apps lies in the
+          successful combination of the two domains.
+        </p>
+      </section>
+
+      <section id="backend-section">
+        <h2>// Backend</h2>
+        <p>
+          We build backends in Typescript, either via AWS Lambda, Cloudflare
+          workers, or NodeJS. Being able to share types between backend and
+          frontend is incredibly empowering, allowing for significantly faster
+          iteration on new features and bug free refactors. We support backend
+          applications with integrated dev ops. Depending on the scale and stage
+          of the company, the solutions can vary greatly all the way from
+          Next.js functions to Kubernetes. Our focus is on speed, and the
+          integration of ops and development is key to unlocking fast and stable
+          iterations that provide both platform stability and engineering
+          productivity.
+        </p>
+      </section>
+      <section>
+        <h2>// Intergration</h2>
+        <p>We have deep experience integrating with a variety of services.</p>
+        <div>This is row of icons</div>
+      </section>
+      <section>
+        <h2>Ready to Collaborate ?</h2>
+        <a href="">Let's do it</a>
+      </section>
+    </main>
+    <footer>
+      <div>© De-Synq 2022</div>
+      <div>This is row of icons</div>
+    </footer>
   </body>
 </html>
