--- a/team/index.html
+++ b/team/index.html
@@ -25,10 +25,50 @@
     <!-- hero section -->
     <section>
       <article>
-        <h1>Modern engineering for innovative companies.</h1>
-        <h2>
-          We are passionate about all things React, React Native, and Web3.
-        </h2>
+        <h1>From Los Angeles To You</h1>
+        <p>
+          We believe in building personal relationships and tackle all of our
+          projects with our in-house team.
+        </p>
+        <div>
+          <a href="#our-team"><span><\></span> Meet Our Team</a>
+          <a href="#careers"><span><\></span> Careers</a>
+        </div>
       </article>
+    </section>
+    <!-- hero content -->
+    <main>
+      <section id="our-team">
+        <h2><span><\></span> Meet Our Team</h2>
+        <div class="team-grid">
+          <div class="team-card">
+            <img src="" alt="profile image" />
+            <h3>Name</h3>
+            <p>Job Title</p>
+          </div>
+        </div>
+      </section>
+
+      <section id="careers">
+        <h2><span><\></span> Careers</h2>
+        <div>
+          <h2>Software Engineer</h2>
+          <p>
+            You will deliver technical strategy simultaneous with hands on
+            development direct to clients. Push the boundaries of yourself and
+            the community through rigorous engagement with open source projects.
+          </p>
+          <a href="">Inquire Now</a>
+        </div>
+      </section>
+      <section>
+        <h2>Ready to Collaborate ?</h2>
+        <a href="">Let's do it</a>
+      </section>
+    </main>
+    <footer>
+      <div>© De-Synq 2022</div>
+      <div>This is row of icons</div>
+    </footer>
   </body>
 </html>
