--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>De-synq Web Page</title>
+
+    <!-- favicons -->
+
+    <!-- styles/css -->
+
+    <title>De-Synq</title>
+    <meta name="description" content="A digital agency" />
   </head>
 
   <body>
@@ -22,25 +28,32 @@
         </div>
       </nav>
     </header>
-    <!-- hero section -->
-    <section>
-      <article>
-        <h1>Modern engineering for innovative companies.</h1>
-        <h2>
-          We are passionate about all things React, React Native, and Web3.
-        </h2>
-      </article>
-      <!-- protfolio menu -->
-      <article>
-        <div>
+
+    <main>
+      <!-- hero section -->
+      <section>
+        <article>
+          <h1>Modern engineering for innovative companies.</h1>
+          <h2>
+            We are passionate about all things React, React Native, and Web3.
+          </h2>
+        </article>
+        <!-- portfolio menu -->
+        <article>
           <div>
-            <h3>Hyundai</h3>
+            <div>
+              <h3>Hyundai</h3>
+            </div>
+            <div>
+              <h3>Spin</h3>
+            </div>
           </div>
-          <div>
-            <h3>Spin</h3>
-          </div>
-        </div>
-      </article>
-    </section>
+        </article>
+      </section>
+    </main>
+
+    <footer>
+      <!-- footer -->
+    </footer>
   </body>
 </html>
