--- a/services/index.html
+++ b/services/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="index.css" />
     <title>De-synq Web Page</title>
   </head>
 
@@ -11,10 +15,10 @@
     <header>
       <!-- navigation bar -->
       <nav>
-        <div>
+        <div class="nav-logo">
           <a href="/">De-Synq</a>
         </div>
-        <div>
+        <div class="nav-item">
           <a href="/works">Works</a>
           <a href="/services">Services</a>
           <a href="/team">Team</a>
@@ -23,23 +27,23 @@
       </nav>
     </header>
     <!-- hero section -->
-    <section>
-      <article>
-        <h1>Pushing Technology Forward.</h1>
-        <p>
-          Pragmatic, integrated, and sustainable decision making. We bridge the
-          gap between engineering and product.
-        </p>
-        <div>
-          <a href="#frontend"><span><\></span> Frontend</a>
-          <a href="#backend">// Backend</a>
-        </div>
-      </article>
-    </section>
-    <!-- hero content -->
     <main>
+      <section class="intro-container">
+        <article class="intro-content">
+          <h1>Pushing Technology Forward</h1>
+          <p>
+            Pragmatic, integrated, and sustainable decision making. We bridge
+            the gap between engineering and product.
+          </p>
+          <div class="intro-services">
+            <a href="#frontend-section"><span><\></span> Frontend</a>
+            <a href="#backend-section"><span></span><\></span> Backend</a>
+          </div>
+        </article>
+      </section>
+      <!-- hero content -->
       <section id="frontend-section">
-        <h2>// Frontend</h2>
+        <h2 class="services-title">// Frontend</h2>
         <p>
           With over 7 years of experience developing React and React Native
           applications, our expertise covers every facet of development
@@ -53,7 +57,7 @@
       </section>
 
       <section id="backend-section">
-        <h2>// Backend</h2>
+        <h2 class="services-title">// Backend</h2>
         <p>
           We build backends in Typescript, either via AWS Lambda, Cloudflare
           workers, or NodeJS. Being able to share types between backend and
@@ -67,16 +71,19 @@
           productivity.
         </p>
       </section>
+
       <section>
-        <h2>// Intergration</h2>
+        <h2 class="serives-title">// Intergration</h2>
         <p>We have deep experience integrating with a variety of services.</p>
         <div>This is row of icons</div>
       </section>
+
       <section>
-        <h2>Ready to Collaborate ?</h2>
+        <h2 class="services-title">Ready to Collaborate ?</h2>
         <a href="">Let's do it</a>
       </section>
     </main>
+
     <footer>
       <div>© De-Synq 2022</div>
       <div>This is row of icons</div>
