add styling for hero section and hero content

--- a/services/index.html
+++ b/services/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="index.css" />
     <title>De-synq Web Page</title>
   </head>
@@ -31,49 +34,53 @@
       <section class="intro-container">
         <article class="intro-content">
           <h1>Pushing Technology Forward</h1>
-          <p>
+          <p class="intro-description">
             Pragmatic, integrated, and sustainable decision making. We bridge
             the gap between engineering and product.
           </p>
           <div class="intro-services">
             <a href="#frontend-section"><span><\></span> Frontend</a>
-            <a href="#backend-section"><span></span><\></span> Backend</a>
+            <a href="#backend-section"><span><\></span> Backend</a>
           </div>
         </article>
       </section>
       <!-- hero content -->
-      <section id="frontend-section">
+      <section class="hero-content" id="frontend-section">
         <h2 class="services-title">// Frontend</h2>
         <p>
           With over 7 years of experience developing React and React Native
           applications, our expertise covers every facet of development
           including, product planning, navigation architecture, gestures &
           animations, charting, server side rendering, CI/CD and performance. We
-          focus on shipping fast and shipping often. While engineering is the
-          focus, product is the outcome. We integrate with product and design to
-          iterate and discover. The magic of delightful apps lies in the
-          successful combination of the two domains.
+          focus on shipping fast and shipping often.
+        </p>
+        <p>
+          While engineering is the focus, product is the outcome. We integrate
+          with product and design to iterate and discover. The magic of
+          delightful apps lies in the successful combination of the two domains.
         </p>
       </section>
 
-      <section id="backend-section">
+      <section class="hero-content" id="backend-section">
         <h2 class="services-title">// Backend</h2>
         <p>
           We build backends in Typescript, either via AWS Lambda, Cloudflare
           workers, or NodeJS. Being able to share types between backend and
           frontend is incredibly empowering, allowing for significantly faster
-          iteration on new features and bug free refactors. We support backend
-          applications with integrated dev ops. Depending on the scale and stage
-          of the company, the solutions can vary greatly all the way from
-          Next.js functions to Kubernetes. Our focus is on speed, and the
-          integration of ops and development is key to unlocking fast and stable
-          iterations that provide both platform stability and engineering
-          productivity.
+          iteration on new features and bug free refactors.
+        </p>
+        <p>
+          We support backend applications with integrated dev ops. Depending on
+          the scale and stage of the company, the solutions can vary greatly all
+          the way from Next.js functions to Kubernetes. Our focus is on speed,
+          and the integration of ops and development is key to unlocking fast
+          and stable iterations that provide both platform stability and
+          engineering productivity.
         </p>
       </section>
 
-      <section>
-        <h2 class="serives-title">// Intergration</h2>
+      <section class="hero-content">
+        <h2 class="services-title">// Intergration</h2>
         <p>We have deep experience integrating with a variety of services.</p>
         <div>This is row of icons</div>
       </section>
