--- a/services/index.html
+++ b/services/index.html
@@ -18,19 +18,21 @@
     <header>
       <!-- navigation bar -->
       <nav>
-        <div class="nav-logo">
-          <a href="/">De-Synq</a>
+        <div class="nav-logo-container">
+          <a href="/services"
+            ><img src="/assets/logo/De-Synq.svg" alt="logo" class="nav-logo"
+          /></a>
         </div>
-        <div class="nav-item">
-          <a href="/works">Works</a>
-          <a href="/services">Services</a>
-          <a href="/team">Team</a>
-          <a href="/blog">Blog</a>
+        <div class="nav-item-container">
+          <a class="nav-item" href="/works">Works</a>
+          <a class="nav-item active" href="/services">Services</a>
+          <a class="nav-item" href="/team">Team</a>
+          <a class="nav-item" href="/blog">Blog</a>
         </div>
       </nav>
     </header>
     <!-- hero section -->
-    <main>
+    <main class="hero-section">
       <section class="intro-container">
         <article class="intro-content">
           <h1>Pushing Technology Forward</h1>
