--- a/services/index.html
+++ b/services/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
+    />
     <link rel="stylesheet" href="index.css" />
     <title>De-synq Web Page</title>
   </head>
@@ -19,7 +23,7 @@
       <!-- navigation bar -->
       <nav>
         <div class="nav-logo-container">
-          <a href="/services"
+          <a href="/"
             ><img src="/assets/logo/De-Synq.svg" alt="logo" class="nav-logo"
           /></a>
         </div>
@@ -41,61 +45,74 @@
             the gap between engineering and product.
           </p>
           <div class="intro-services">
-            <a href="#frontend-section"><span><\></span> Frontend</a>
-            <a href="#backend-section"><span><\></span> Backend</a>
+            <a href="#frontend-section"><i class="las la-code"></i> Frontend</a>
+            <a href="#backend-section"><i class="las la-code"></i> Backend</a>
           </div>
         </article>
       </section>
       <!-- hero content -->
       <section class="hero-content" id="frontend-section">
-        <h2 class="services-title">// Frontend</h2>
-        <p>
-          With over 7 years of experience developing React and React Native
-          applications, our expertise covers every facet of development
-          including, product planning, navigation architecture, gestures &
-          animations, charting, server side rendering, CI/CD and performance. We
-          focus on shipping fast and shipping often.
-        </p>
-        <p>
-          While engineering is the focus, product is the outcome. We integrate
-          with product and design to iterate and discover. The magic of
-          delightful apps lies in the successful combination of the two domains.
-        </p>
+        <div class="description-container">
+          <h2 class="services-title"><i class="las la-code"></i> Frontend</h2>
+          <p>
+            With over 7 years of experience developing React and React Native
+            applications, our expertise covers every facet of development
+            including, product planning, navigation architecture, gestures &
+            animations, charting, server side rendering, CI/CD and performance.
+            We focus on shipping fast and shipping often.
+          </p>
+          <p>
+            While engineering is the focus, product is the outcome. We integrate
+            with product and design to iterate and discover. The magic of
+            delightful apps lies in the successful combination of the two
+            domains.
+          </p>
+        </div>
       </section>
 
       <section class="hero-content" id="backend-section">
-        <h2 class="services-title">// Backend</h2>
-        <p>
-          We build backends in Typescript, either via AWS Lambda, Cloudflare
-          workers, or NodeJS. Being able to share types between backend and
-          frontend is incredibly empowering, allowing for significantly faster
-          iteration on new features and bug free refactors.
-        </p>
-        <p>
-          We support backend applications with integrated dev ops. Depending on
-          the scale and stage of the company, the solutions can vary greatly all
-          the way from Next.js functions to Kubernetes. Our focus is on speed,
-          and the integration of ops and development is key to unlocking fast
-          and stable iterations that provide both platform stability and
-          engineering productivity.
-        </p>
+        <div class="description-container">
+          <h2 class="services-title"><i class="las la-code"></i> Backend</h2>
+          <p>
+            We build backends in Typescript, either via AWS Lambda, Cloudflare
+            workers, or NodeJS. Being able to share types between backend and
+            frontend is incredibly empowering, allowing for significantly faster
+            iteration on new features and bug free refactors.
+          </p>
+          <p>
+            We support backend applications with integrated dev ops. Depending
+            on the scale and stage of the company, the solutions can vary
+            greatly all the way from Next.js functions to Kubernetes. Our focus
+            is on speed, and the integration of ops and development is key to
+            unlocking fast and stable iterations that provide both platform
+            stability and engineering productivity.
+          </p>
+        </div>
       </section>
 
-      <section class="hero-content">
-        <h2 class="services-title">// Intergration</h2>
-        <p>We have deep experience integrating with a variety of services.</p>
-        <div>This is row of icons</div>
+      <section class="hero-content integration">
+        <div class="description-container">
+          <h2 class="services-title">
+            <i class="las la-code"></i> Intergration
+          </h2>
+          <p>We have deep experience integrating with a variety of services.</p>
+          <div>This is row of icons</div>
+        </div>
       </section>
 
-      <section>
-        <h2 class="services-title">Ready to Collaborate ?</h2>
-        <a href="">Let's do it</a>
+      <section class="hero-content collaborate">
+        <h2 class="services-title collaborate">Ready to Collaborate ?</h2>
+        <a class="collaborate-button" href="">Let's do it</a>
       </section>
     </main>
 
     <footer>
       <div>© De-Synq 2022</div>
-      <div>This is row of icons</div>
+      <div class="footer-icon">
+        <a href=""><i class="lab la-github footer-icon"></i></a>
+        <a href=""><i class="lab la-twitter footer-icon"></i></a>
+        <a href=""><i class="lab la-linkedin-in footer-icon"></i></a>
+      </div>
     </footer>
   </body>
 </html>
