add background image for hero section

--- a/services/index.html
+++ b/services/index.html
@@ -49,6 +49,13 @@
             <a href="#backend-section"><i class="las la-code"></i> Backend</a>
           </div>
         </article>
+        <div>
+          <img
+            src="/assets/images/services-background.svg"
+            alt="background image"
+            class="background-image"
+          />
+        </div>
       </section>
       <!-- hero content -->
       <section class="hero-content" id="frontend-section">
