--- a/services/index.html
+++ b/services/index.html
@@ -102,8 +102,48 @@
           <h2 class="services-title">
             <i class="las la-code"></i> Intergration
           </h2>
-          <p>We have deep experience integrating with a variety of services.</p>
-          <div>This is row of icons</div>
+          <p>
+            We aere highly skilled and knowlegeable in many different languages
+            and tools.
+          </p>
+          <div class="icon-row">
+            <div class="icon-container">
+              <div class="icon-image">
+                <img src="/assets/icons/html-5.png" alt="service icon" />
+              </div>
+              <h3 class="icon-description">HTML</h3>
+            </div>
+            <div class="icon-container">
+              <div class="icon-image">
+                <img src="/assets/icons/css-3.png" alt="service icon" />
+              </div>
+              <h3 class="icon-description">CSS</h3>
+            </div>
+            <div class="icon-container">
+              <div class="icon-image">
+                <img src="/assets/icons/figma.png" alt="service icon" />
+              </div>
+              <h3 class="icon-description">Figma</h3>
+            </div>
+            <div class="icon-container">
+              <div class="icon-image">
+                <img src="/assets/icons/nodejs.png" alt="service icon" />
+              </div>
+              <h3 class="icon-description">NodeJS</h3>
+            </div>
+            <div class="icon-container">
+              <div class="icon-image">
+                <img src="/assets/icons/react.png" alt="service icon" />
+              </div>
+              <h3 class="icon-description">React</h3>
+            </div>
+            <div class="icon-container">
+              <div class="icon-image">
+                <img src="/assets/icons/mongodb.png" alt="service icon" />
+              </div>
+              <h3 class="icon-description">Mongodb</h3>
+            </div>
+          </div>
         </div>
       </section>
 
