--- a/team/index.html
+++ b/team/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
+    />
+    <link rel="stylesheet" href="index.css" />
     <title>De-synq Web Page</title>
   </head>
 
@@ -11,64 +22,95 @@
     <header>
       <!-- navigation bar -->
       <nav>
-        <div>
-          <a href="/">De-Synq</a>
+        <div class="nav-logo-container">
+          <a href="/"
+            ><img src="/assets/logo/De-Synq.svg" alt="logo" class="nav-logo"
+          /></a>
         </div>
-        <div>
-          <a href="/works">Works</a>
-          <a href="/services">Services</a>
-          <a href="/team">Team</a>
-          <a href="/blog">Blog</a>
+        <div class="nav-item-container">
+          <a class="nav-item" href="/works">Works</a>
+          <a class="nav-item" href="/services">Services</a>
+          <a class="nav-item active" href="/team">Team</a>
+          <a class="nav-item" href="/blog">Blog</a>
         </div>
       </nav>
     </header>
     <!-- hero section -->
-    <section>
-      <article>
-        <h1>From Los Angeles To You</h1>
-        <p>
-          We believe in building personal relationships and tackle all of our
-          projects with our in-house team.
-        </p>
-        <div>
-          <a href="#our-team"><span><\></span> Meet Our Team</a>
-          <a href="#careers"><span><\></span> Careers</a>
-        </div>
-      </article>
-    </section>
-    <!-- hero content -->
     <main>
-      <section id="our-team">
-        <h2><span><\></span> Meet Our Team</h2>
-        <div class="team-grid">
-          <div class="team-card">
-            <img src="" alt="profile image" />
-            <h3>Name</h3>
-            <p>Job Title</p>
+      <section class="intro-container">
+        <article class="intro-content">
+          <h1>Pushing Technology Forward</h1>
+          <p class="intro-description">
+            Pragmatic, integrated, and sustainable decision making. We bridge
+            the gap between engineering and product.
+          </p>
+          <div class="intro-services">
+            <a href="#frontend-section"><i class="las la-code"></i> Frontend</a>
+            <a href="#backend-section"><i class="las la-code"></i> Backend</a>
           </div>
+        </article>
+        <div>
+          <img
+            src="/assets/images/services-background.svg"
+            alt="background image"
+            class="background-image"
+          />
+        </div>
+      </section>
+      <!-- hero content -->
+      <section class="hero-content" id="our-team">
+        <div class="description-container">
+          <h2 class="services-title">
+            <i class="las la-code"></i> Meet Our Team
+          </h2>
+          <p>
+            With over 7 years of experience developing React and React Native
+            applications, our expertise covers every facet of development
+            including, product planning, navigation architecture, gestures &
+            animations, charting, server side rendering, CI/CD and performance.
+            We focus on shipping fast and shipping often.
+          </p>
+          <p>
+            While engineering is the focus, product is the outcome. We integrate
+            with product and design to iterate and discover. The magic of
+            delightful apps lies in the successful combination of the two
+            domains.
+          </p>
         </div>
       </section>
 
-      <section id="careers">
-        <h2><span><\></span> Careers</h2>
-        <div>
-          <h2>Software Engineer</h2>
+      <section class="hero-content" id="career">
+        <div class="description-container">
+          <h2 class="services-title"><i class="las la-code"></i> Career</h2>
           <p>
-            You will deliver technical strategy simultaneous with hands on
-            development direct to clients. Push the boundaries of yourself and
-            the community through rigorous engagement with open source projects.
+            We build backends in Typescript, either via AWS Lambda, Cloudflare
+            workers, or NodeJS. Being able to share types between backend and
+            frontend is incredibly empowering, allowing for significantly faster
+            iteration on new features and bug free refactors.
           </p>
-          <a href="">Inquire Now</a>
+          <p>
+            We support backend applications with integrated dev ops. Depending
+            on the scale and stage of the company, the solutions can vary
+            greatly all the way from Next.js functions to Kubernetes. Our focus
+            is on speed, and the integration of ops and development is key to
+            unlocking fast and stable iterations that provide both platform
+            stability and engineering productivity.
+          </p>
         </div>
       </section>
-      <section>
-        <h2>Ready to Collaborate ?</h2>
-        <a href="">Let's do it</a>
+      <section class="hero-content collaborate">
+        <h2 class="services-title collaborate">Ready to Collaborate ?</h2>
+        <a class="collaborate-button" href="">Let's do it</a>
       </section>
     </main>
+
     <footer>
       <div>© De-Synq 2022</div>
-      <div>This is row of icons</div>
+      <div class="footer-icon">
+        <a href=""><i class="lab la-github footer-icon"></i></a>
+        <a href=""><i class="lab la-twitter footer-icon"></i></a>
+        <a href=""><i class="lab la-linkedin-in footer-icon"></i></a>
+      </div>
     </footer>
   </body>
 </html>
