add profile image to team section change career content into join us for more contextual situation

--- a/team/index.html
+++ b/team/index.html
@@ -39,14 +39,14 @@
     <main>
       <section class="intro-container">
         <article class="intro-content">
-          <h1>Pushing Technology Forward</h1>
+          <h1>From Indonesia To You</h1>
           <p class="intro-description">
-            Pragmatic, integrated, and sustainable decision making. We bridge
-            the gap between engineering and product.
+            We believe in building personal relationships and tackle all of our
+            projects with our in-house team.
           </p>
           <div class="intro-services">
-            <a href="#frontend-section"><i class="las la-code"></i> Frontend</a>
-            <a href="#backend-section"><i class="las la-code"></i> Backend</a>
+            <a href="#our-team"> <i class="las la-code"></i> Meet Our Team </a>
+            <a href="#join-us"><i class="las la-code"></i> Join Us</a>
           </div>
         </article>
         <div>
@@ -63,39 +63,39 @@
           <h2 class="services-title">
             <i class="las la-code"></i> Meet Our Team
           </h2>
-          <p>
-            With over 7 years of experience developing React and React Native
-            applications, our expertise covers every facet of development
-            including, product planning, navigation architecture, gestures &
-            animations, charting, server side rendering, CI/CD and performance.
-            We focus on shipping fast and shipping often.
-          </p>
-          <p>
-            While engineering is the focus, product is the outcome. We integrate
-            with product and design to iterate and discover. The magic of
-            delightful apps lies in the successful combination of the two
-            domains.
-          </p>
+          <div class="team-profile-container">
+            <div class="team-profile-card">
+              <div class="team-profile-image-container">
+                <img
+                  src="/assets/images/yukafi-profile-picture.jpeg"
+                  alt="yukafi photo"
+                />
+              </div>
+              <h3>Naufal Yukafi Ridlo</h3>
+            </div>
+
+            <div class="team-profile-card">
+              <div class="team-profile-image-container">
+                <img
+                  src="/assets/images/agung-profile-image.jpg"
+                  alt="agung photo"
+                />
+              </div>
+              <h3>Agung Nur Ramadhan</h3>
+            </div>
+          </div>
         </div>
       </section>
 
-      <section class="hero-content" id="career">
+      <section class="hero-content" id="join-us">
         <div class="description-container">
-          <h2 class="services-title"><i class="las la-code"></i> Career</h2>
+          <h2 class="services-title"><i class="las la-code"></i> Join Us</h2>
           <p>
-            We build backends in Typescript, either via AWS Lambda, Cloudflare
-            workers, or NodeJS. Being able to share types between backend and
-            frontend is incredibly empowering, allowing for significantly faster
-            iteration on new features and bug free refactors.
+            Together we built awesome websites and applications for awesome
+            clients. Not confident ? Worry not! We also ready to guide you in
+            every development process until you can get used to the work flow.
           </p>
-          <p>
-            We support backend applications with integrated dev ops. Depending
-            on the scale and stage of the company, the solutions can vary
-            greatly all the way from Next.js functions to Kubernetes. Our focus
-            is on speed, and the integration of ops and development is key to
-            unlocking fast and stable iterations that provide both platform
-            stability and engineering productivity.
-          </p>
+          <a class="join-team-button" href="">Okay, I'm in!</a>
         </div>
       </section>
       <section class="hero-content collaborate">
