--- a/team/index.html
+++ b/team/index.html
@@ -15,7 +15,7 @@
       href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
     />
     <link rel="stylesheet" href="index.css" />
-    <title>De-synq Web Page</title>
+    <title>Team | De-Synq</title>
   </head>
 
   <body>
