--- a/works/index.html
+++ b/works/index.html
@@ -5,30 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>De-synq Web Page</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
-    <header>
-      <!-- navigation bar -->
-      <nav>
-        <div>
-          <a href="/">De-Synq</a>
+    <div class="login">
+      <div class="container">
+        <div class="col-left">
+          <div class="login-text">
+            <h2>Welcome Back</h2>
+            <p>Create your account.<br />It's totally free.</p>
+            <a href="" class="btn">Sign Up</a>
+          </div>
         </div>
-        <div>
-          <a href="/works">Works</a>
-          <a href="/services">Services</a>
-          <a href="/team">Team</a>
-          <a href="/blog">Blog</a>
+
+        <div class="col-right">
+          <div class="login-form">
+            <h2>Login</h2>
+            <form action="">
+              <p>
+                <label>Username or email address<span>*</span></label>
+                <input type="text" placeholder="Username or Email" required />
+              </p>
+              <p>
+                <label>Password<span>*</span></label>
+                <input type="password" placeholder="Password" required />
+              </p>
+              <p>
+                <input type="submit" value="Sign In" />
+              </p>
+              <p>
+                <a href="">Forget password?</a>
+              </p>
+            </form>
+          </div>
         </div>
-      </nav>
-    </header>
-    <!-- hero section -->
-    <section>
-      <article>
-        <h1>Modern engineering for innovative companies.</h1>
-        <h2>
-          We are passionate about all things React, React Native, and Web3.
-        </h2>
-      </article>
+      </div>
+    </div>
   </body>
 </html>
