--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
           /></a>
         </div>
         <div class="nav-item-container">
-          <a class="nav-item" href="/works">Works</a>
-          <a class="nav-item active" href="/services">Services</a>
+          <a class="nav-item" href="/">Works</a>
+          <a class="nav-item" href="/services">Services</a>
           <a class="nav-item" href="/team">Team</a>
           <a class="nav-item" href="/blog">Blog</a>
         </div>
