--- a/team/index.html
+++ b/team/index.html
@@ -28,7 +28,7 @@
           /></a>
         </div>
         <div class="nav-item-container">
-          <a class="nav-item" href="/works">Works</a>
+          <a class="nav-item" href="/">Works</a>
           <a class="nav-item" href="/services">Services</a>
           <a class="nav-item active" href="/team">Team</a>
           <a class="nav-item" href="/blog">Blog</a>
