refactor: title and improve some default styling

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>De-synq Web Page</title>
+    <title>De-Synq</title>
+    <meta name="description" content="Digital agency." />
   </head>
 
   <body>
@@ -23,9 +24,9 @@
       <!-- navigation bar -->
       <nav>
         <div class="nav-logo-container">
-          <a href="/"
-            ><img src="/assets/logo/De-Synq.svg" alt="logo" class="nav-logo"
-          /></a>
+          <a href="/">
+            <img src="/assets/logo/De-Synq.svg" alt="logo" class="nav-logo" />
+          </a>
         </div>
         <div class="nav-item-container">
           <a class="nav-item" href="/">Works</a>
@@ -44,9 +45,10 @@
             We are passionate about all things React, React Native, and Web3.
           </p>
           <div class="intro-services">
-            <a href="/projects/RingDNA/index.html"
-              ><i class="las la-code"></i> Ring DNA</a
-            >
+            <a href="/projects/ringdna/index.html">
+              <i class="las la-code"></i>
+              Ring DNA
+            </a>
           </div>
         </article>
         <div>
