--- a/services/index.html
+++ b/services/index.html
@@ -14,8 +14,8 @@
       rel="stylesheet"
       href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
     />
-    <link rel="stylesheet" href="index.css" />
-    <title>De-synq Web Page</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Services | De-Synq</title>
   </head>
 
   <body>
