--- a/team/index.html
+++ b/team/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="De-Sync is a digital transformation studio that scales teams and their technical experience."
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,7 +18,7 @@
       rel="stylesheet"
       href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
     />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="/style.css" />
     <title>Team | De-Synq</title>
   </head>
 
@@ -49,11 +53,10 @@
             <a href="#join-us"><i class="las la-code"></i> Join Us</a>
           </div>
         </article>
-        <div>
+        <div class="background-image">
           <img
             src="/assets/images/team-background.svg"
             alt="background image"
-            class="background-image"
           />
         </div>
       </section>
