fix: move class from img to div

--- a/team/index.html
+++ b/team/index.html
@@ -53,10 +53,11 @@
             <a href="#join-us"><i class="las la-code"></i> Join Us</a>
           </div>
         </article>
-        <div class="background-image">
+        <div>
           <img
             src="/assets/images/team-background.svg"
             alt="background image"
+            class="background-image"
           />
         </div>
       </section>
