--- a/projects/ringdna/index.html
+++ b/projects/ringdna/index.html
@@ -128,7 +128,10 @@
     <footer>
       <div>© De-Synq 2022</div>
       <div class="footer-icon">
-        <a href="" target="_blank" rel="noreferrer noopener"
+        <a
+          href="https://github.com/de-synq/de-synq"
+          target="_blank"
+          rel="noreferrer noopener"
           ><i class="lab la-github footer-icon"></i
         ></a>
         <a href="" target="_blank" rel="noreferrer noopener"
