--- a/team/index.html
+++ b/team/index.html
@@ -111,9 +111,18 @@
     <footer>
       <div>© De-Synq 2022</div>
       <div class="footer-icon">
-        <a href=""><i class="lab la-github footer-icon"></i></a>
-        <a href=""><i class="lab la-twitter footer-icon"></i></a>
-        <a href=""><i class="lab la-linkedin-in footer-icon"></i></a>
+        <a
+          href="https://github.com/de-synq/de-synq"
+          target="_blank"
+          rel="noreferrer noopener"
+          ><i class="lab la-github footer-icon"></i
+        ></a>
+        <a href="" target="_blank" rel="noreferrer noopener"
+          ><i class="lab la-twitter footer-icon"></i
+        ></a>
+        <a href="" target="_blank" rel="noreferrer noopener"
+          ><i class="lab la-linkedin-in footer-icon"></i
+        ></a>
       </div>
     </footer>
   </body>
