--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </a>
         </div>
         <div class="nav-item-container">
-          <a class="nav-item" href="/">Works</a>
+          <a class="nav-item active" href="/">Works</a>
           <a class="nav-item" href="/services">Services</a>
           <a class="nav-item" href="/team">Team</a>
           <a class="nav-item" href="/blog">Blog</a>
