--- a/projects/ringdna/index.html
+++ b/projects/ringdna/index.html
@@ -40,8 +40,8 @@
       <section class="intro-container">
         <article class="intro-content">
           <h1>RingDNA</h1>
-          <p class="intro-description">Never Miss a Coaching Moment</p>
-          <p class="intro-language">React, React Native, Audio</p>
+          <h2 class="intro-description">Never Miss a Coaching Moment</h2>
+          <h3 class="intro-language">React, React Native, Audio</h3>
           <div class="intro-services">
             <a href="/#"><i class="las la-code"></i> App Store</a>
             <a href="/#"><i class="las la-code"></i> Play Store</a>
@@ -50,7 +50,7 @@
         </article>
         <div>
           <img
-            src="/assets/images/services-background.svg"
+            src="/assets/images/home-background.svg"
             alt="background image"
             class="background-image"
           />
