fix: fixing responsive

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
           <a class="nav-item active" href="/">Works</a>
           <a class="nav-item" href="/services">Services</a>
           <a class="nav-item" href="/team">Team</a>
-          <a class="nav-item" href="/blog">Blog</a>
         </div>
       </nav>
     </header>
@@ -51,7 +50,7 @@
             </a>
           </div>
         </article>
-        <div>
+        <div class="intro-services-image">
           <img
             src="/assets/images/home-background.svg"
             alt="background image"
