--- a/projects/ringdna/index.html
+++ b/projects/ringdna/index.html
@@ -31,7 +31,6 @@
           <a class="nav-item" href="/">Works</a>
           <a class="nav-item" href="/services">Services</a>
           <a class="nav-item" href="/team">Team</a>
-          <a class="nav-item" href="/blog">Blog</a>
         </div>
       </nav>
     </header>
@@ -48,7 +47,7 @@
             <a href="/#"><i class="las la-code"></i> Website</a>
           </div>
         </article>
-        <div>
+        <div class="intro-services-image">
           <img
             src="/assets/images/home-background.svg"
             alt="background image"
