--- a/services/index.html
+++ b/services/index.html
@@ -35,7 +35,6 @@
           <a class="nav-item" href="/">Works</a>
           <a class="nav-item active" href="/services">Services</a>
           <a class="nav-item" href="/team">Team</a>
-          <a class="nav-item" href="/blog">Blog</a>
         </div>
       </nav>
     </header>
@@ -53,7 +52,7 @@
             <a href="#backend-section"><i class="las la-code"></i> Backend</a>
           </div>
         </article>
-        <div>
+        <div class="intro-services-image">
           <img
             src="/assets/images/services-background.svg"
             alt="background image"
