fix: fixing responsive team

--- a/team/index.html
+++ b/team/index.html
@@ -52,7 +52,7 @@
             <a href="#join-us"><i class="las la-code"></i> Join Us</a>
           </div>
         </article>
-        <div>
+        <div class="intro-services-image">
           <img
             src="/assets/images/team-background.svg"
             alt="background image"
